[package]
name = "orbit-physical-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit_physical_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
product = {git = "https://github.com/OrbitEng/product"}
transaction = {git = "https://github.com/OrbitEng/transaction"}
market-accounts = {git = "https://github.com/OrbitEng/accounts", features = ["cpi"]}
dispute = {git = "https://github.com/OrbitEng/dispute", features = ["cpi"]}
orbit-catalog = {git = "https://github.com/OrbitEng/catalog", features = ["cpi"]}